syntax = "proto3";

package cn.edu.ustc.kclab.ddss;

message Node {
    string id = 1;
    string addr = 2;
}

message JoinRequest {
    Node node = 1;
}

message JoinResponse {
}

message LeaveRequest {
    Node node = 1;
}

message LeaveResponse {
}

message ListRequest {
}

message ListResponse {
    repeated Node nodes = 1;
}

service Cluster {
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Leave(LeaveRequest) returns (LeaveResponse);
    rpc List(ListRequest) returns (ListResponse);
}

enum EngineKind {
    EAGER = 0;
    LAZY = 1;
}

message EngineMetaData {
    string id = 1;
    EngineKind kind = 2;
    repeated string input = 3;
    repeated string output = 4;
}

message MetaDataRequest {
}

message MetaDataResponse {
    EngineMetaData metadata = 1;
}

message PushDataRequest {
    repeated string data = 1;
}

message PushDataResponse {
}

message PullDataRequest {
}

message PullDataResponse {
    repeated string data = 1;
}

service Engine {
    rpc MetaData(MetaDataRequest) returns (MetaDataResponse);
    rpc PushData(PushDataRequest) returns (PushDataResponse);
    rpc PullData(PullDataRequest) returns (PullDataResponse);
}
